@@ -23,23 +23,23 @@ mtw.default.areas = {
 ["the Grey Towers"] = {level = "30-60", krondor = "extremely far to the northwest", prime = {"mountain"}, env = {"hills", "forest", "path", "fresh water", "canyon", "natural underground", "village"}, targets = {"a goblin shaman", "an enraged goblin warrior", "a savage goblin", "Gortznik%, Chieftain of the Ktzerk", "a bandit sentry", "the bandit quartermaster", "a grizzled bandit", "a seasoned mountain raider", "a giant black bat", "a grey wolf", "a huge black bear", "a spotted bobcat", "a vulture", "a mountain sheep", "a green%-banded rattlesnake", "a speckled hawk", "a bighorn ram"}},
 ["the Ithilian Defile"] = {level = "90+", krondor = "extremely far to the north", prime = {"canyon"}, env = {"valley", "constructed underground", "ruins", "fresh water"}, targets = {"a snake%-like figure", "the Pantathian Serpent%-Priest", "a bighorn ram", "a ferocious coyote"}},
 ["the Calastius Mountains"] = {level = "??", krondor = "very far to the east", prime = {"mountains"}, env = {"path", "fresh water", "ruins", "natural underground", "constructed underground", "village"}, targets = {"a grey wolf", "a silver marmot", "a bighorn ram", "a speckled hawk", "a mountain sheep", "a menacing brigand"}},
-["the Inclindel Gap"] = {level = "??", krondor = "extremely far to the north", prime = {"mountains"}, targets = {"a snowy mountain owl", "an eagle", "a tree shrew", "a huge black bear"}},
+["the Inclindel Gap"] = {level = "??", krondor = "extremely far to the north", prime = {"mountains"}, targets = {"a snowy mountain owl", "an eagle", "a tree shrew", "a huge black bear", "a wandering pilgrim"}},
 ["the western Teeth of the World"] = {level = "??", krondor = "extremely far to the north", prime = {"mountains"}, env = {"natural underground", "urban"}, targets = {"a mountain sheep", "a vulture", "a rough%-legged buzzard", "a huge black bear"}},
 ["the Teeth of the World"] = {level = "??", krondor = "extremely far to the north", prime = {"mountains"}, targets = {"a huge wyvern", "a hatchling wyvern"}},
 ["the Southwestern Plains"] = {level = "??", krondor = "extremely far to the northwest", targets = {"a lively sparrow", "a small rabbit", "a large hare", "a wiry vixen"}},
 ["the Free-Cities Wilderness"] = {level = "??", krondor = "distantly to the west", targets = {"a tiny field mouse", "a lively sparrow", "a large hare"}},
 ["Central Hills"] = {level = "Low", krondor = "distantly to the north", prime = {"hills"}, env = {"urban", "fresh water"}, targets = {"a Yabonese Highwayman", "a small rabbit"}},
-["the Vale of Isbandia"] = {level = "Low", krondor = "extremely far to the north", targets = {"a time%-displaced glamredhel archer", "a time%-displaced glamredhel warrior"}},
+["the Vale of Isbandia"] = {level = "Low", krondor = "extremely far to the north", targets = {"a wandering pilgrim", "a fierce snow leopard", "a magnificent horned brown elk", "a sleek arctic fox", "a tiny field mouse", "a small rabbit", "a large hare", "a speckled hawk"}},
 ["the Straits of Darkness"] = {level = "??", krondor = "distantly to the west", prime = {"beach", "ocean"}, env = {"ruins", "path", "constructed underground"}, targets = {"a large sandcrawler", "a seagull", "a ravenous shark"}},
 ["countryside south of Krondor"] = {level = "none", krondor = "directly southwest", prime = {"farmlands", "river"}, env = {"village", "natural underground"}, targets = {}},
 ["farmland surrounding Krondor"] = {level = "??", krondor = "far to the east", prime = {"farmland"}, env = {"urban"}, targets = {}},
-["the Duchy of Crydee"] = {level = "??", krondor = "extremely far to the northwest", prime = {"grasslands", "farmlands"}, env = {"forest", "road", "urban"}, targets = {}},
+["the Duchy of Crydee"] = {level = "0-20", krondor = "extremely far to the northwest", prime = {"grasslands", "farmlands"}, env = {"forest", "road", "urban"}, targets = {"a striped locust", "a large hare", "a young fawn", "a small rabbit", "a lively sparrow"}},
 ["farmlands surrounding Natal"] = {level = "??", krondor = "extremely far to the north", targets = {"a small blackbird", "a lively sparrow", "a pig"}},
 ["Yabon Forest"] = {level = "30-60", krondor = "extremely far to the northwest", prime = {"forest"}, env = {"natural underground"}, targets = {"a Grey Warrior", "a powerful stag", "a small forest bear", "a delicate doe", "a sturdy quail", "a small rabbit"}},
 ["Edder Forest"] = {level = "??", krondor = "extremely far to the north", prime = {"forest"}, env = {"natural underground", "river"}, targets = {"a mutant dragon", "a shaggy grizzly bear", "a delicate doe", "a small forest bear", "a dire wolf", "a brook trout", "a yellow perch", "a wood squirrel", "a small blackbird", "an edder lark"}},
 --["the Green Heart Forest"] = {level = "Questing", krondor = "extremely far to the northwest", prime = {"forest"}, targets = {"a white%-tailed deer", "a short%-tusked boar", "a small rabbit"}},
 ["the Green Heart Forest"] = {level = "Questing", krondor = "extremely far to the northwest", prime = {"forest"}, targets = {"a goblin", "a small goblin", "a forest troll", "a young fawn", "a tawny owl", "a small forest bear", "a powerful stag", "a lively sparrow", "a tiny field mouse", "a wiry vixen", "a wiry fox", "a magnificent lion", "a tree shrew", "a delicate doe", "a plump wood fowl", "a delicate butterfly", "a white%-tailed deer", "a short%-tusked boar", "a small rabbit"}},
-["Elvandar Forest"] = {level = "Questing", krondor = "extremely far to the northwest", prime = {"forest"}, env = {"river", "natural underground"}, targets = {}},
+["Elvandar Forest"] = {level = "Questing", krondor = "extremely far to the northwest", prime = {"forest"}, env = {"river", "natural underground"}, targets = {"a water salamander", "a yellow perch", "a plump wood fowl", "a horned beetle", "a large mosquito", "a hairy brown and white spider", "a small forest bear", "a large snail", "a powerful stag", "a tree shrew", "a brightly%-colored pheasant", "a gwali youth", "a gwali", "a delicate doe", "a delicate butterfly", "a wiry fox", "a speckled hawk", "a young fawn"}},
 ["the goblin village of Skreech"] = {level = "??", krondor = "extremely far to the northwest", prime = {"village"}, env = {"natural underground"}, targets = {"a goblin pikeman", "a goblin mercenary", "a goblin archer", "a goblin guard", "a little goblin girl", "Pikemaster Toryk", "a goblin shaman", "Skreech, the goblin chief"}},
 ["Smuggler's Cove"] = {level = "20-40", krondor = "very far to the west", prime = {"reef", "natural underground"}, env = {"beach", "ocean", "urban", "fresh water"}, targets = {"a smuggler", "a scallywag sailor", "a Quegan mariner", "a seagull", "a large sandcrawler", "a large clam"}, items = {"a cargo crate"}},
 ["an Imp Cave"] = {level = "20-40", krondor = "very far to the west", prime = {"natural underground"}, targets = {"an imp rascal", "a scavenger imp", "a giant glow%-worm", "a glow%-worm"}},
@@ -55,14 +55,14 @@ mtw.default.areas = {
 ["Bandit Camp"] = {level = "50-70", krondor = "far to the north", prime = {"forest", "ruins"}, env = {"road", "garden", "constructed underground", "plains"}, targets = {"an ethereal mana wyrm", "a male bandit", "a female bandit", "a bandit guard", "a guard dog", "a bandit scout", "a plump wood fowl"}, items = {"a mote of glowing%, blue mana"}},
 ["the Far Coast beaches"] = {level = "25-35", krondor = "extremely far to the northwest", prime = {"ocean", "beach"}, env = {"natural underground", "reef"}, targets = {"a snapping turtle", "an undead sailor"}},
 ["beaches between Carse and Jonril"] = {level = "40-60", krondor = "extremely far to the northwest", prime = {"ocean", "beach"}, targets = {"a ravenous shark"}},
-["the Lake of the Sky"] = {level = "25-50", krondor = "extremely far to the north", prime = {"fresh water", "beach"}, targets = {}},
+["the Lake of the Sky"] = {level = "25-50", krondor = "extremely far to the north", prime = {"fresh water", "beach"}, targets = {"a snapper crocodile", "a red%-billed sandpiper", "a water salamander", "a white%-breasted gull"}},
 ["the Eagles' Reaches"] = {level = "20-40", krondor = "extremely far to the northwest", prime = {"mountains"}, env = {"natural underground"}, targets = {"a large eagle", "a red crested eagle", "a silver crested eagle", "a cougar", "a baby eagle", "a brown crested eagle"}, items = {"a brown feather", "a silver feather", "a red eagle tail feather", "an eagle talon"}},
 ["the Great Star Lake"] = {level = "40-60", krondor = "very far to the south", prime = {"fresh water"}, targets = {"a water elemental"}},
 ["the Hadati Hills"] = {level = "30-50", krondor = "extremely far to the north", prime = {"hills"}, env = {"road", "mountains", "natural underground", "river", "fresh water", "forest", "urban", "path", "village", "beach"}, targets = {"an ethereal mana wyrm", "a humanoid wraith", "a huge black wyvern", "an ancient wyvern", "a Moredhel assassin", "a Moredhel ranger", "a lively sparrow", "a highland fox", "a grizzly bear", "a speckled hawk", "a highland viper", "a northern black otter", "a silver%-fin fish", "a rock wyrm"}, items = {"a mote of glowing%, blue mana"}},
 ["a crypt in the Highlands"] = {level = "40-80", krondor = "extremely far to the north", prime = {"natural underground", "constructed underground"}, targets = {"an ethereal mana wyrm", "an undead chieftain", "a revenant retainer", "a death cult priest", "a Hadati ghost", "the ghost of a Hadati Elder", "the ghost of a Hadati Lord", "a risen magician"}, items = {"a necromancer%'s keystone", "an ancient rotting kilt", "a mote of glowing%, blue mana"}},
 ["the road between Zun and LaMut"] = {level = "??", krondor = "distantly to the north", prime = {"road"}, env = {"urban", "mines", "fresh water"}, targets = {"a dessicated draugr", "a putrid corpsehound"}},
-["the Tower of Artifice"] = {level = "40-70", krondor = "distantly to the north", targets = {}},
-["Semal Reach"] = {level = "40-70", krondor = "extremely far to the north", prime = {"swamp", "jungle", "volcanic"}, env = {"mountains", "valley", "natural underground", "constructed underground", "river", "fresh water", "ruins", "urban"}, targets = {"a mottled wyvern", "a sleek jaguar", "a solid earth elemental", "a fiery elemental of flame", "a vicious crocodile", "an anaconda", "a large%, frilled dragon%-lizard", "a rock wyrm", "a small dust devil", "a Keshian dog soldier", "a giant shield beetle", "a huge black bear"}},
+["the Tower of Artifice"] = {level = "40-70", krondor = "distantly to the north", targets = {"a sphere of glowing, blue mana", "a lifelike stone sentinel", "an apprentice artificer"}},
+["Semal Reach"] = {level = "40-70", krondor = "extremely far to the north", prime = {"swamp", "jungle", "volcanic"}, env = {"mountains", "valley", "natural underground", "constructed underground", "river", "fresh water", "ruins", "urban"}, targets = {"a mottled wyvern", "a sleek jaguar", "a solid earth elemental", "a fiery elemental of flame", "a vicious crocodile", "an anaconda", "a large%, frilled dragon%-lizard", "a rock wyrm", "a small dust devil", "a Keshian dog soldier", "a giant shield beetle", "a huge black bear", "a colorful viper", "a large mountain goat"}},
 ["the Abbey at Sarth"] = {level = "60-100", krondor = "very far to the northwest", prime = {"village"}, targets = {"an Ishapian monk", "a warrior monk", "a librarian of Sarth"}},
 --["the Thunderhell Plains"] = {level = "60-100", krondor = "extremely far to the north", targets = {"a large salmon", "a bison", "an antlered caribou", "a caribou"}},
 ["the Thunderhell Plains"] = {level = "60-100", krondor = "extremely far to the north", targets = {"an ethereal mana wyrm", "a tufted eared lynx", "a polar bear", "a female polar bear", "a large salmon", "a bison", "an antlered caribou", "a caribou"}},
@@ -98,15 +98,15 @@ mtw.default.areas = {
 ["Jonril"] = {level = "??", krondor = "extremely far to the northwest", targets = {}},
 ["the town of Walinor"] = {level = "??", krondor = "extremely far to the northwest", prime = {"urban"}, targets = {}},
 ["the town of Crydee"] = {level = "??", krondor = "extremely far to the northwest", prime = {"urban"}, env = {"garden", "fresh water", "constructed underground"}, targets = {}},
-["Harlech"] = {level = "??", krondor = "extremely far to the north", prime = {"village"}, targets = {}},
+["Harlech"] = {level = "??", krondor = "extremely far to the north", prime = {"village"}, targets = {"a Moredhel protector", "a Moredhel villager", "a Moredhel woman"}},
 ["Ardanian Ice Caves"] = {level = "??", krondor = "extremely far to the north", targets = {}},
 ["the City of Yabon"] = {level = "??", krondor = "extremely far to the north", prime = {"urban"}, env = {"garden"}, targets = {}},
 ["the City of LaMut"] = {level = "??", krondor = "extremely far to the north", targets = {}},
 ["Wyke"] = {level = "??", krondor = "extremely far to the north", targets = {}},
-["Armengar"] = {level = "??", krondor = "extremely far to the north", prime = {"ruins"}, env = {"constructed underground"}, targets = {}},
+["the ruins of Armengar"] = {level = "??", krondor = "extremely far to the north", prime = {"ruins"}, env = {"constructed underground"}, targets = {"a grizzly bear", "a carrion crow", "a flea", "a blowfly", "a vulture", "a bandit guard", "Moltor, the slaver"}},
 ["Caern"] = {level = "??", krondor = "extremely far to the north", targets = {}},
 ["the town of Tyr-sog"] = {level = "??", krondor = "extremely far to the north", prime = {"urban"}, targets = {}},
-["the Plains of Isbandia"] = {level = "??", krondor = "extremely far to the north", targets = {}},
+["the Plains of Isbandia"] = {level = "??", krondor = "extremely far to the north", targets = {"a wandering pilgrim", "a rough%-legged buzzard", "a snowy%-white arctic fox", "a small rabbit", "a bighorn ram", "a stocky, white%-striped badger", "a brown bear", "a red stag", "a red doe", "a young fawn", "a jackrabbit", "a small blackbird", "a speckled hawk", "a yellow perch", "a magnificent horned brown elk", "a fierce snow leopard", "a massive northern hawk"}},
 ["Yabon Highway"] = {level = "??", krondor = "extremely far to the north", prime = {"road"}, env = {"urban"}, targets = {"a Yabonese Highwayman"}},
 ["Free Cities Highway"] = {level = "??", krondor = "distantly to the northwest", targets = {}},
 ["Far Coast Road"] = {level = "??", krondor = "distantly to the west", targets = {}},
