@@ -872,3 +872,4 @@ v
 o Made decapitate easier to notice -Savil
 o Both aliases 'rift' and 'cast rift' can work -Savil
 o Added a 'generic' area in which you can add mobs that you want to bash in every area (wyrms, pumpkins...) -Savil
+o Updated bashing areas -Nemi
